fix: Java 16 이상 전용 .toList()를 Collectors.toList()로 교체하여 호환성 해결